<resources>
    <!-- DRAWER AND APP BAR STRINGS -->
    <string name="app_name">QRCode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QRCode</string>
    <string name="nav_header_subtitle">Generator and reader</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- SIDE MENU STRINGS -->
    <string name="menu_qr_generator">QR Generator</string>
    <string name="menu_barcode_generator">BarCode Generator</string>
    <string name="menu_scanner">Code Scanner</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reader_title">Codes Reader</string>
    <string name="menu_generators_title">Generators</string>

    <!-- VIEWS STRINGS -->
    <string name="button_generate">GENERATE</string>
    <string name="button_scan">SCAN</string>
    <string name="button_save"><u>Save on phone</u></string>
    <string name="hint_generate">text to generate…</string>
    <string name="result">result of scan</string>
</resources>