<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">
    <item android:title="@string/menu_reader_title">
        <menu>
            <item
                android:id="@+id/nav_scanner"
                android:icon="@drawable/ic_qr_scanner"
                android:title="@string/menu_scanner" />
        </menu>
    </item>
    <item android:title="@string/menu_generators_title">
        <menu>
            <item
                android:id="@+id/nav_qr_generator"
                android:icon="@drawable/ic_qr_generator"
                android:title="@string/menu_qr_generator" />
            <item
                android:id="@+id/nav_barcode_generator"
                android:icon="@drawable/ic_barcode_generator"
                android:title="@string/menu_barcode_generator" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
    </menu>
