<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_qr_generator">

    <fragment
        android:id="@+id/nav_qr_generator"
        android:name="com.kacperprzelozny.qrcode.ui.qrgenerator.QrgeneratorFragment"
        android:label="@string/menu_qr_generator"
        tools:layout="@layout/fragment_qr_generator" />
    <fragment
        android:id="@+id/nav_scanner"
        android:name="com.kacperprzelozny.qrcode.ui.scanner.ScannerFragment"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_scanner" />
    <fragment
        android:id="@+id/nav_barcode_generator"
        android:name="com.kacperprzelozny.qrcode.ui.bargenerator.BargeneratorFragment"
        android:label="@string/menu_barcode_generator"
        tools:layout="@layout/fragment_bar_generator" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.kacperprzelozny.qrcode.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>