<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.qrgenerator.QrgeneratorFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/generated_qr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="80dp"
                android:src="@drawable/ic_qr_generator"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="40dp"
            android:gravity="center"
            android:orientation="vertical">
            <EditText
                android:id="@+id/to_generate_qr"
                android:layout_height="70sp"
                android:layout_width="match_parent"
                android:inputType="text"
                android:hint="@string/hint_generate" />
            <Button
                android:id="@+id/generate_qr"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/button_generate"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/button_save"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/button_save"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>